--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js",
+    "start": "node index.js",
     "serve": "nodemon index.js"
   },
   "keywords": [],
@@ -16,6 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "nodemon": "^3.0.1"
+    "express-fileupload": "^1.4.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1",
+    "openai": "^4.14.0",
+    "pdf-parse": "^1.1.1"
   }
 }
